Inception - Test Failed

--- a/srcs/mariadb/Dockerfile
+++ b/srcs/mariadb/Dockerfile
@@ -2,7 +2,7 @@ FROM alpine:3.19
 
 RUN apk update && apk add mariadb mariadb-client
 
-COPY setup.sh /setup.sh
+COPY tools/setup.sh /setup.sh
 RUN chmod +x /setup.sh
 
 CMD ["sh", "/setup.sh"]
