--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -51,20 +51,20 @@ services:
 
 
 volumes:
-    wordpress_data:
+  wordpress_data:
     name: wordpress_data
     driver: local
     driver_opts:
       type: none
       o: bind
-      device: /home/${USER}/data/wordpress
+      device: "/home/${USER}/data/wordpress"
   mariadb_data:
     name: mariadb_data
     driver: local
     driver_opts:
       type: none
       o: bind
-      device: /home/${USER}/data/mariadb 
+      device: "/home/${USER}/data/mariadb"
 
 networks:
   inception:
