--- a/srcs/nginx/conf/nginx.conf
+++ b/srcs/nginx/conf/nginx.conf
@@ -13,10 +13,10 @@ http {
 
     server {
         listen 443 ssl;
-        server_name ${DOMAIN_NAME};
+        server_name giuseppe.42.fr;
 
-        ssl_certificate     /etc/nginx/certs/${DOMAIN_NAME}.crt;
-        ssl_certificate_key /etc/nginx/certs/${DOMAIN_NAME}.key;
+        ssl_certificate     /etc/nginx/certs/giuseppe.42.fr.crt;
+        ssl_certificate_key /etc/nginx/certs/giuseppe.42.fr.key;
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
