Inception - Fixed File Structure an followed gemartin Tutorial

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,16 +1,20 @@
 # Domain
 DOMAIN_NAME=gvigilan.42.fr
 
-# MariaDB credentials
-MYSQL_ROOT_PASSWORD=rootpass123
-MYSQL_DATABASE=wordpress
-MYSQL_USER=wpuser
-MYSQL_PASSWORD=wppassword
+MYSQL_HOSTNAME=mariadb
+MYSQL_DATABASE=gvigilandb
+MYSQL_USER=gvigilan
+MYSQL_PASSWORD=Inazuma11!
+MYSQL_ROOT_USER=root
+MYSQL_ROOT_PASSWORD=Inazuma11!
 
-# WordPress setup
-WP_TITLE=My Cool WP Site
-WP_ADMIN_USER=gvigilan
-WP_ADMIN_PASSWORD=Pippo01!
-WP_ADMIN_EMAIL=user@gvigilan.42.fr
+WORDPRESS_TITLE=MyWordPress
+WORDPRESS_ADMIM=gvigilan
+WORDPRESS_ADMIM_PASS=Inazuma11!
+WORDPRESS_ADMIM_EMAIL=gvigilan@student.42roma.it
+
+WORDPRESS_USER=Joseph
+WORDPRESS_EMAIL=giuseppe.vigilante98@yahoo.com
+WORDPRESS_USER_PASS=Inazuma11!
 
 USER=giuseppe
