--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,7 +1,8 @@
 services:
   nginx:
     build: 
-      context: ./nginx
+      context: ./requirements/nginx
+    image: nginx
     container_name: nginx
     ports:
       - "443:443"
@@ -14,37 +15,29 @@ services:
       - inception
 
   mariadb:
-    build:
-      context: ./mariadb
+    build: 
+      context: ./requirements/mariadb
+    image: mariadb
     container_name: mariadb
     volumes:
       - mariadb_data:/var/lib/mysql
-    environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+    env_file:
+      - .env
     networks:
       - inception
     restart: always
 
   wordpress:
     build: 
-      context: ./wordpress
+      context: ./requirements/wordpress
+    image: wordpress
     container_name: wordpress
     depends_on:
       - mariadb
     volumes:
       - wordpress_data:/var/www/html
-    environment:
-      WORDPRESS_DB_HOST: mariadb
-      WORDPRESS_DB_NAME: ${MYSQL_DATABASE}
-      WORDPRESS_DB_USER: ${MYSQL_USER}
-      WORDPRESS_DB_PASSWORD: ${MYSQL_PASSWORD}
-      WORDPRESS_TITLE: ${WP_TITLE}
-      WORDPRESS_ADMIN_USER: ${WP_ADMIN_USER}
-      WORDPRESS_ADMIN_PASSWORD: ${WP_ADMIN_PASSWORD}
-      WORDPRESS_ADMIN_EMAIL: ${WP_ADMIN_EMAIL}
+    env_file:
+      - .env
     networks:
       - inception
     restart: always
