--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -6,15 +6,13 @@ RUN apt-get update && \
 
 COPY conf/mariadb.conf /etc/mysql/mariadb.conf.d/50-server.cnf
 
-RUN mkdir -p /var/run/mysqld \
-	&& chown -R mysql:mysql /var/run/mysqld \
-	&& chmod 777 /var/run/mysqld
+RUN mkdir -p /run/mysqld \
+	&& chown -R mysql:mysql /run/mysqld \
+	&& chmod 775 /run/mysqld
 
 EXPOSE 3306
 
 COPY ./tools/setup_mariadb.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/setup_mariadb.sh
-
-RUN mysql_install_db
 
 ENTRYPOINT [ "/usr/local/bin/setup_mariadb.sh" ]
