Inception - Fixes to nginx.conf

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,41 +1,35 @@
-worker_processes 1;
+server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    ssl_protocols TLSv1.3;
+    ssl_certificate /etc/ssl/certs/nginx.crt;
+    ssl_certificate_key /etc/ssl/private/nginx.key;
 
-events {
-    worker_connections 1024;
-}
+    root /var/www/html;
+    server_name gvigilan.42.fr www.gvigilan.42.fr;
 
-http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+    index index.php index.html index.htm;
 
-    sendfile        on;
-    keepalive_timeout  65;
+    location / {
+        try_files $uri $uri/ =404;
+    }
 
-    server {
-        listen 443 ssl;
-        listen [::]:443 ssl;
-        server_name gvigilan.42.fr;
-
-        ssl_certificate /etc/ssl/certs/nginx.crt;
-        ssl_certificate_key /etc/ssl/private/nginx.key;
-        ssl_protocols TLSv1.3;
-
-        index index.php;
-        root /var/www/html;
-
-        location / {
-            try_files $uri $uri/ /index.php$is_args$args;
-        }
-
-        location ~ \.php$ {
-            try_files $uri =404;
-            fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            fastcgi_pass wordpress:9000;
-            fastcgi_index index.php;
-            include fastcgi_params;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            fastcgi_param PATH_INFO $fastcgi_path_info;
-            fastcgi_read_timeout 300;
-        }
+    location ~ \.php$ {
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass wordpress:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_intercept_errors on;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_read_timeout 300;
     }
 }
+
+server {
+    listen 80;
+    listen [::]:80;
+    return 444;
+}
+
