Inception - Fixes Wordpress start

--- a/srcs/.env
+++ b/srcs/.env
@@ -2,7 +2,7 @@
 DOMAIN_NAME=gvigilan.42.fr
 
 MYSQL_HOSTNAME=mariadb
-MYSQL_DATABASE=gvigilandb
+MYSQL_DATABASE=gvigilandb:3306
 MYSQL_USER=gvigilan
 MYSQL_PASSWORD=Inazuma11!
 MYSQL_ROOT_USER=root
