Inceeption - Fix env and setups

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,8 +1,8 @@
 # Domain
 DOMAIN_NAME=gvigilan.42.fr
 
-MYSQL_HOSTNAME=mariadb
-MYSQL_DATABASE=gvigilandb:3306
+MYSQL_HOSTNAME=gvigilandb:3306
+MYSQL_DATABASE=mariadb
 MYSQL_USER=gvigilan
 MYSQL_PASSWORD=Inazuma11!
 MYSQL_ROOT_USER=root
