Inceeption - Fix MDB Dockerfile names

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -3,8 +3,8 @@ FROM debian:bullseye
 RUN apt-get update && apt-get upgrade -y && \
     apt-get install mariadb-server -y
 
-COPY ./tools/mariadb_script.sh /mariadb_script.sh
+COPY ./tools/setup_mariadb.sh /setup_mariadb.sh
 
-COPY ./conf/mdb.cnf /etc/mysql/mariadb.conf.d/mdb.cnf
+COPY ./conf/mariadb.cnf /etc/mysql/mariadb.conf.d/mariadb.cnf
 
-ENTRYPOINT ["/bin/bash", "/mariadb_script.sh"]
+ENTRYPOINT ["/bin/bash", "/setup_mariadb.sh"]
