--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -27,7 +27,10 @@ services:
       - inception
     restart: always
     healthcheck:
-      - cmd 
+      test: ["CMD", "mysqladmin", "ping", "-h", "gvigilan.42.fr"]
+      interval: 15s
+      timeout: 5s
+      retries: 5
 
   wordpress:
     build: 
