--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,14 +1,13 @@
 FROM debian:bullseye
 
 RUN apt-get update && apt-get upgrade -y && \
-    apt-get install mariadb-server -y
+    apt-get install mariadb-server -y && \
+	mkdir -p /run/mysqld && chown mysql:mysql /run/mysqld
 
 COPY ./tools/setup_mariadb.sh /setup_mariadb.sh
 
 COPY ./conf/mariadb.conf /etc/mysql/mariadb.conf.d/mariadb.conf
 
 RUN chmod +x /setup_mariadb.sh
-
-RUN mysql_install_db
 
 ENTRYPOINT ["/bin/bash", "/setup_mariadb.sh"]
