--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,13 +1,15 @@
 FROM debian:bullseye
 
 RUN apt-get update && apt-get upgrade -y && \
-    apt-get install -y mariadb-server mariadb-client && \
-    mkdir -p /run/mysqld && chown mysql:mysql /run/mysqld
+	mariadb-server mariadb-client && \
+	mkdir -p /run/mysqld && \
+	chown -R mysql:mysql /run/mysqld /var/lib/mysql
 
-COPY ./tools/setup_mariadb.sh /docker-entrypoint-initdb.d/setup_mariadb.sh
+COPY ./tools/setup_mariadb.sh /setup_mariadb.sh
 
 COPY ./conf/mariadb.conf /etc/mysql/mariadb.conf.d/mariadb.conf
 
-RUN chmod +x /docker-entrypoint-initdb.d/setup_mariadb.sh
+RUN chmod +x /setup_mariadb.sh
+RUN mysqld --initialize-insecure --user=mysql --datadir=/var/lib/mysql
 
-CMD ["mysqld_safe"]
+CMD ["/setup_mariadb.sh"]
