Inception - removed --initialize-insecure

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,7 +1,7 @@
 FROM debian:bullseye
 
 RUN apt-get update && apt-get upgrade -y && \
-	apt-get install mariadb-server mariadb-client && \
+	apt-get install -y mariadb-server mariadb-client && \
 	mkdir -p /run/mysqld && \
 	chown -R mysql:mysql /run/mysqld /var/lib/mysql
 
@@ -10,6 +10,6 @@ COPY ./tools/setup_mariadb.sh /setup_mariadb.sh
 COPY ./conf/mariadb.conf /etc/mysql/mariadb.conf.d/mariadb.conf
 
 RUN chmod +x /setup_mariadb.sh
-RUN mysqld --initialize-insecure --user=mysql --datadir=/var/lib/mysql
+RUN mysqld --user=mysql --datadir=/var/lib/mysql
 
 CMD ["/setup_mariadb.sh"]
