--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -5,11 +5,14 @@ RUN apt-get update && apt-get upgrade -y && \
 	mkdir -p /run/mysqld && \
 	chown -R mysql:mysql /run/mysqld /var/lib/mysql
 
+RUN mysql_install_db --user=mysql --basedir=/usr --datadir=/var/lib/mysql
+
 COPY ./tools/setup_mariadb.sh /setup_mariadb.sh
 
 COPY ./conf/mariadb.conf /etc/mysql/mariadb.conf.d/mariadb.conf
 
-RUN chmod +x /setup_mariadb.sh
-RUN mysqld --user=mysql --datadir=/var/lib/mysql
+EXPOSE 3306
 
-CMD ["/setup_mariadb.sh"]
+RUN chmod +x /setup_mariadb.sh
+
+ENTRYPOINT ["/setup_mariadb.sh"]
