--- a/srcs/requirements/mariadb/conf/mariadb.conf
+++ b/srcs/requirements/mariadb/conf/mariadb.conf
@@ -1,7 +1,6 @@
 [mysqld]
-
-user                    = mysql
-port                    = 3306
-datadir                 = /var/lib/mysql
-bind-address            = 0.0.0.0
-socket                  = /run/mysqld/mysqld.sock
+user = mysql
+datadir = /var/lib/mysql
+bind_address = 0.0.0.0
+port = 3306
+socket = /run/mysqld/mysqld.sock
