--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -2,8 +2,8 @@ server {
     listen 443 ssl;
     listen [::]:443 ssl;
     ssl_protocols TLSv1.3;
-    ssl_certificate /etc/ssl/certs/nginx.crt;
-    ssl_certificate_key /etc/ssl/private/nginx.key;
+    ssl_certificate /etc/ssl/certs/inception.crt;
+    ssl_certificate_key /etc/ssl/private/inception.key;
 
     root /var/www/html;
     server_name gvigilan.42.fr www.gvigilan.42.fr;
