--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -3,6 +3,8 @@ FROM debian:bullseye
 RUN apt-get update && apt-get upgrade -y && \
     apt-get install mariadb-server -y
 
+RUN mkdir -p /run/mysqld && chown mysql:mysql /run/mysqld
+
 COPY ./conf/mdb.cnf /etc/mysql/mariadb.conf.d/mdb.cnf
 COPY ./tools/mariadb_script.sh /mariadb_script.sh
 
