--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -3,7 +3,10 @@ FROM debian:bullseye
 RUN apt-get update && apt-get upgrade -y && \
     apt-get install mariadb-server -y
 
-RUN rm -f /etc/mysql/my.cnf /etc/mysql/mariadb.cnf
+# Remove all existing config files to prevent unexpected overrides
+RUN rm -f /etc/mysql/my.cnf \
+         /etc/mysql/mariadb.cnf && \
+    find /etc/mysql/mariadb.conf.d/ ! -name 'mdb.cnf' -type f -delete
 
 COPY ./conf/mdb.cnf /etc/mysql/mdb.cnf
 COPY ./tools/mariadb_script.sh /mariadb_script.sh
