Inception - remove folders

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -4,11 +4,9 @@ RUN apt-get update && apt-get upgrade -y && \
     apt-get install mariadb-server -y
 
 # Remove all existing config files to prevent unexpected overrides
-RUN rm -f /etc/mysql/my.cnf \
-         /etc/mysql/mariadb.cnf && \
-    find /etc/mysql/mariadb.conf.d/ ! -name 'mdb.cnf' -type f -delete
+RUN rm -rf /etc/mysql && mkdir -p /etc/mysql/mariadb.conf.d
 
-COPY ./conf/mdb.cnf /etc/mysql/mdb.cnf
+COPY ./conf/mdb.cnf /etc/mysql/mariadb.conf.d/mdb.cnf
 COPY ./tools/mariadb_script.sh /mariadb_script.sh
 
 RUN chmod +x /mariadb_script.sh
