Inception - forcing removal

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -4,7 +4,7 @@ RUN apt-get update && apt-get upgrade -y && \
     apt-get install mariadb-server -y
 
 # Remove all existing config files to prevent unexpected overrides
-RUN rm -rf /etc/mysql && mkdir -p /etc/mysql/mariadb.conf.d
+RUN rm -f /etc/mysql/my.cnf /etc/mysql/mariadb.cnf
 
 COPY ./conf/mdb.cnf /etc/mysql/mariadb.conf.d/mdb.cnf
 COPY ./tools/mariadb_script.sh /mariadb_script.sh
