Inception new approch

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -3,8 +3,9 @@ FROM debian:bullseye
 RUN apt-get update && apt-get upgrade -y && \
     apt-get install mariadb-server -y
 
-# Remove all existing config files to prevent unexpected overrides
-RUN rm -f /etc/mysql/my.cnf /etc/mysql/mariadb.cnf
+RUN mkdir -p /var/lib/mysql /run/mysqld && \
+    chown -R mysql:mysql /var/lib/mysql /run/mysqld
+
 
 COPY ./conf/mdb.cnf /etc/mysql/mariadb.conf.d/mdb.cnf
 COPY ./tools/mariadb_script.sh /mariadb_script.sh
