--- a/srcs/.env
+++ b/srcs/.env
@@ -1,7 +1,7 @@
 # Domain
 DOMAIN_NAME=gvigilan.42.fr
 
-MYSQL_HOSTNAME=gvigilandb:3306
+MYSQL_HOSTNAME=mariadb:3306
 MYSQL_DATABASE=mariadb
 MYSQL_USER=gvigilan
 MYSQL_PASSWORD=Inazuma11!
