--- a/srcs/requirements/mariadb/conf/mdb.cnf
+++ b/srcs/requirements/mariadb/conf/mdb.cnf
@@ -1,12 +1,7 @@
 [mysqld]
-skip-networking=0
-skip-bind-address  
 user = mysql
 datadir = /var/lib/mysql
-bind_address = 0.0.0.0
+bind_address=0.0.0.0
 port = 3306
-socket = /dev/null
+socket = /run/mysqld/mysqld.sock
 
-[client]
-protocol=TCP
-host=127.0.0.1
