--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -5,9 +5,8 @@ server {
     ssl_certificate /etc/nginx/ssl/inception.crt;
     ssl_certificate_key /etc/nginx/ssl/inception.key;
 
-    root /var/www/html;
+    root /var/www/inception;
     server_name gvigilan.42.fr www.gvigilan.42.fr;
-
     index index.php index.html index.htm;
 
     location / {
@@ -15,16 +14,11 @@ server {
     }
 
     location ~ \.php$ {
-        try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass wordpress:9000;
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_intercept_errors on;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-        fastcgi_read_timeout 300;
-    }
+		include snippets/fastcgi-php.conf;
+		fastcgi_pass wordpress:9000;
+		include fastcgi_params;
+		fastcgi_intercept_errors on;
+	}
 }
 
 server {
